--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:layout_width="73dp"
         android:layout_height="49dp"
         android:layout_marginTop="8dp"
+        android:onClick="GoToNewPage"
         android:text="Info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
